all data showing

--- a/invoice_template.html
+++ b/invoice_template.html
@@ -71,6 +71,28 @@
         </table>
 
         <!-- Shipping Fields -->
+        <table cellpadding="0" cellspacing="0" style="width: 100%; margin-bottom: 40px;">
+            <tr>
+                <td style="border-top: 1px solid #E5E7EB; padding-top: 16px;">
+                    <table cellpadding="0" cellspacing="0" style="width: 100%;">
+                        <tr>
+                          <td style="vertical-align: top;">
+                              <div style="font-size: 0.875rem; text-transform: uppercase; letter-spacing: 0.05em; color: #6b7280; margin-bottom: 12px; font-weight: 600;">SHIP DATE</div>
+                              <div style="color: #374151;">4/15/2025</div> 
+                          </td>
+                            <td style="vertical-align: top;">
+                              <div style="font-size: 0.875rem; text-transform: uppercase; letter-spacing: 0.05em; color: #6b7280; margin-bottom: 12px; font-weight: 600;">SHIP VIA</div>
+                                <div style="color: #374151;">Plane</div> 
+                          </td>
+                          <td style="vertical-align: top;">
+                              <div style="font-size: 0.875rem; text-transform: uppercase; letter-spacing: 0.05em; color: #6b7280; margin-bottom: 12px; font-weight: 600;">TRACKING NO.</div>
+                                <div style="color: #374151;">444</div> 
+                          </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+        </table>
 
         <!-- Custom Fields -->
         <table cellpadding="0" cellspacing="0" style="width: 100%; margin-bottom: 20px;">
@@ -155,6 +177,10 @@
                             <td style="padding: 8px 0; font-size: 0.95rem; text-align: right;">- $10.00</td>
                         </tr>
                                                 
+                        <tr>
+                            <td style="padding: 8px 0; font-size: 0.95rem;">SHIPPING</td>
+                            <td style="padding: 8px 0; font-size: 0.95rem; text-align: right;">$10.00</td>
+                        </tr>
                   
                         <tr>
                             <td style="padding: 8px 0; font-size: 0.95rem;">TOTAL</td>
@@ -166,7 +192,7 @@
                         </tr> 
                       <tr>
                           <td colspan="2" style="padding-top: 20px; border-top: 1px solid #e5e7eb; font-size: 1.25rem; font-weight: 700; color: #0000FF; text-align: right;">
-                              BALANCE DUE $155.00
+                              BALANCE DUE $165.00
                           </td>
                       </tr>
                       <!-- need to add a conditon for this -->
