ok now all data showing

--- a/invoice_template.html
+++ b/invoice_template.html
@@ -162,7 +162,9 @@
         <table cellpadding="0" cellspacing="0" style="width: 100%; margin-top: 30px;">
             <tr>
                 <td style="width: 50%; vertical-align: top;">
-                    
+                     <div style="color: #6b7280; font-size: 0.95rem; text-align: left; max-width: 300px;">
+                        Thank you for your business and have a great day! 
+                    </div> 
                 </td>
             
                 <td style="width: 50%; vertical-align: top;">
