Updated handle bar templates for all emails

--- a/ClientReminders/first_failed_call.html
+++ b/ClientReminders/first_failed_call.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Payment not found</title>
+    <title>First Call Miss</title>
 </head>
 
 <body
@@ -14,7 +14,7 @@
             <tr>
                 <td>
                     <h1 style="color: white; margin: 0; font-size: 1.5rem; font-weight: 600; letter-spacing: 0.025em;">
-                        INVOICE PAYMENTS NOT FOUND</h1>
+                        MISSED CALL</h1>
                     <p style="color: rgba(255, 255, 255, 0.9); margin: 8px 0 0 0; font-size: 1rem;">INSPYR SOLUTIONS LLC
                     </p>
                 </td>
@@ -28,7 +28,7 @@
         <p style="margin: 0 0 16px 0; font-size: 1rem; font-weight: 500;">Hello Kealy Baxter,</p>
 
         <p style="margin: 0 0 16px 0; font-size: 1rem; line-height: 1.6">
-           During our recent phone conversation, you mentioned the following invoices were paid:
+            We've attempted to contact you via phone regarding the following outstanding invoices:
         </p>
 
        <table cellpadding="0" cellspacing="0" border="0" width="100%" style="
@@ -100,7 +100,8 @@
         </table>
 
         <p style="margin-bottom: 12px; font-size: 1rem;">
-            Our records still show these as unpaid. Please verify payment details and provide confirmation.
+            Please note we will try calling in a few days. <br>
+            We kindly ask that you answer our call as the number is for outbound communication only and cannot receive incoming calls.
         </p>
 
           <p style="margin: 0; font-size: 1rem;">
