--- a/ClientReminders/weekly_overdue.html
+++ b/ClientReminders/weekly_overdue.html
@@ -1,9 +1,10 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Payment not found</title>
+    <title>Weekly Invoice Reminder</title>
 </head>
 
 <body
@@ -14,7 +15,7 @@
             <tr>
                 <td>
                     <h1 style="color: white; margin: 0; font-size: 1.5rem; font-weight: 600; letter-spacing: 0.025em;">
-                        INVOICE PAYMENTS NOT FOUND</h1>
+                        OVERDUE INVOICE REMINDER</h1>
                     <p style="color: rgba(255, 255, 255, 0.9); margin: 8px 0 0 0; font-size: 1rem;">INSPYR SOLUTIONS LLC
                     </p>
                 </td>
@@ -28,7 +29,12 @@
         <p style="margin: 0 0 16px 0; font-size: 1rem; font-weight: 500;">Hello Kealy Baxter,</p>
 
         <p style="margin: 0 0 16px 0; font-size: 1rem; line-height: 1.6">
-           During our recent phone conversation, you mentioned the following invoices were paid:
+            Hope this email finds you well.
+        </p>
+
+        <p style="margin: 0 0 16px 0; font-size: 1rem; line-height: 1.6">
+            We are reaching back out to you for an update on the following invoices as they have exceeded net terms and
+            the resolution of these charges are required.
         </p>
 
        <table cellpadding="0" cellspacing="0" border="0" width="100%" style="
@@ -99,10 +105,21 @@
             </tr>
         </table>
 
-        <p style="margin-bottom: 12px; font-size: 1rem;">
-            Our records still show these as unpaid. Please verify payment details and provide confirmation.
-        </p>
-
+        <ul style="font-family: Arial, Helvetica, sans-serif; padding-left: 20px; margin-bottom: 20px;">
+            <li style="margin: 0 0 16px 0; font-size: 1rem; line-height: 1.6">
+                If a payment has already been made, please provide the payment date, the amount, and the payment delivery method.
+            </li>
+            <li style="margin: 0 0 16px 0; font-size: 1rem; line-height: 1.6">
+                If payment was made via check, please provide the address the check was mailed to.
+            </li>
+            <li style="margin: 0 0 16px 0; font-size: 1rem; line-height: 1.6">
+                If payment was made via ACH, please provide the date, the name of the bank, and account holder from which payment originated.
+            </li>
+            <li style="margin: 0 0 16px 0; font-size: 1rem; line-height: 1.6">
+                If payment has not been made, please provide an expected payment date for our records.
+            </li>
+        </ul>
+        
           <p style="margin: 0; font-size: 1rem;">
             Best regards,<br>
             <span style="font-weight: 500;">Accounts Receiveable Department</span>
