--- a/InternalReminders/call_summary.html
+++ b/InternalReminders/call_summary.html
@@ -6,15 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Call Summary</title>
   </head>
-  <body
-    style="
-      margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif;
-      background-color: #f5f5f5;
-      color: #333333;
-    "
-  >
+<body
+    style="font-family: Arial, Helvetica, sans-serif; line-height: 1.6; color: #1f2937; max-width: 800px; margin: 0 auto; padding: 40px 20px; background-color: #f9fafb;">
+        <div style="margin-bottom: 12px; background: #0277BD; border-radius: 8px 8px 0 0; padding: 12px; text-align: center; font-family: Arial, Helvetica, sans-serif;">
+        <table width="100%" cellpadding="0" cellspacing="0" border="0">
+            <tr>
+                <td>
+                    <h1 style="color: white; margin: 0; font-size: 1.5rem; font-weight: 600; letter-spacing: 0.025em;">CALL SUMMARY</h1>
+                    <p style="color: rgba(255, 255, 255, 0.9); margin: 8px 0 0 0; font-size: 1rem;">Pinnacle Systems - 5/11/2025</p>
+                </td>
+            </tr>
+        </table>
+    </div>
+    <div style="background: white; border-radius: 12px; padding: 40px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1); position: relative; overflow: hidden;">
+
     <table
       cellpadding="0"
       cellspacing="0"
@@ -40,7 +45,7 @@
               <td style="padding: 20px">
                 <h2
                   style="
-                    color: #578fca;
+                    color: #0277BD;
                     margin: 0 0 15px 0;
                     font-size: 18px;
                     border-bottom: 1px solid #eeeeee;
@@ -111,7 +116,7 @@
               <td style="padding: 20px">
                 <h2
                   style="
-                    color: #578fca;
+                    color:#0277BD;
                     margin: 0 0 15px 0;
                     font-size: 18px;
                     border-bottom: 1px solid #eeeeee;
@@ -273,7 +278,7 @@
               <td style="padding: 20px">
                 <h2
                   style="
-                    color: #578fca;
+                    color: #0277BD;
                     margin: 0 0 15px 0;
                     font-size: 18px;
                     border-bottom: 1px solid #eeeeee;
@@ -351,7 +356,7 @@
               <td style="padding: 20px; text-align: center">
                 <h2
                   style="
-                    color: #578fca;
+                    color: #0277BD;
                     margin: 0 0 15px 0;
                     font-size: 18px;
                     border-bottom: 1px solid #eeeeee;
@@ -365,7 +370,7 @@
                   target="_blank"
                   style="
                     display: inline-block;
-                    background-color: #578fca;
+                    background-color: #0277BD;
                     color: #ffffff;
                     text-decoration: none;
                     padding: 10px 20px;
@@ -380,5 +385,6 @@
         </td>
       </tr>
     </table>
+    </div>
   </body>
 </html>
