--- a/InternalReminders/call_summary.html
+++ b/InternalReminders/call_summary.html
@@ -13,7 +13,7 @@
             <tr>
                 <td>
                     <h1 style="color: white; margin: 0; font-size: 1.5rem; font-weight: 600; letter-spacing: 0.025em;">CALL SUMMARY</h1>
-                    <p style="color: rgba(255, 255, 255, 0.9); margin: 8px 0 0 0; font-size: 1rem;">Pinnacle Systems - 5/11/2025</p>
+                    <p style="color: rgba(255, 255, 255, 0.9); margin: 8px 0 0 0; font-size: 1rem;">Pinnacle Systems - 05/12/2025</p>
                 </td>
             </tr>
         </table>
@@ -87,7 +87,7 @@
                         Call Date:
                       </p>
                       <p style="margin: 0 0 10px 0; color: #333333">
-                        5/11/2025
+                        05/12/2025
                       </p>
                     </td>
                   </tr>
@@ -182,7 +182,7 @@
                           <p style="margin: 0 0 0 0; color: #666666">
                             Status:
                             <span style="color: #4caf50; font-weight: bold">
-                            Scheduled for 5/11/2025
+                            Scheduled for 05/12/2025
                             </span>
                           </p>
                       </td>
@@ -296,6 +296,52 @@
         </td>
       </tr>
       
+        <!-- Escalations Card -->
+        <tr>
+          <td style="padding: 15px 20px 0 20px">
+            <table
+              cellpadding="0"
+              cellspacing="0"
+              border="0"
+              width="100%"
+              style="
+                background-color: #fff8e1;
+                border-radius: 6px;
+                box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+                border-left: 4px solid #ff9800;
+              "
+            >
+              <tr>
+                <td style="padding: 20px">
+                  <h2
+                    style="
+                      color: #ff9800;
+                      margin: 0 0 0 0;
+                      font-size: 18px;
+                      border-bottom: 1px solid #ffe0b2;
+                    "
+                  >
+                    Escalations
+                  </h2>
+                </td>
+              </tr>
+              <tr>
+              <td style="padding: 0 20px 15px 20px">
+                <p style="margin: 0; line-height: 1.5; color: #333333">
+                <strong>Invoice #1001:</strong> The client said they are unable to pay the invoice becuase the project is not complete
+                </p>
+             </td>
+              </tr>
+              <tr>
+              <td style="padding: 0 20px 15px 20px">
+                <p style="margin: 0; line-height: 1.5; color: #333333">
+                <strong>Invoice #1002:</strong> The client says they can not pay the invoice because the invoice is incorrect
+                </p>
+             </td>
+              </tr>
+            </table>
+          </td>
+        </tr>
         
       <!-- Client Related Updates -->
       <tr>
