--- a/ClientReminders/payment_check.html
+++ b/ClientReminders/payment_check.html
@@ -73,14 +73,14 @@
                             </td>
                             <td style="padding: 16px; width: 33%; vertical-align: top; text-align: center;">
                                 <p style="margin: 0; font-size: 16px; color: #e74c3c; font-weight: 600;">
-                                    5/22/2025
+                                    05/19/2025
                                 </p>
                             </td>
                         </tr>
                         <tr>
                             <td style="padding: 16px; width: 33%; vertical-align: top; text-align: center;">
                                 <p style="margin: 0; font-size: 16px; color: #333333; font-weight: 600;">
-                                    1001
+                                    1002
                                 </p>
                             </td>
                             <td style="padding: 16px; width: 33%; vertical-align: top; text-align: center;">
@@ -90,7 +90,7 @@
                             </td>
                             <td style="padding: 16px; width: 33%; vertical-align: top; text-align: center;">
                                 <p style="margin: 0; font-size: 16px; color: #e74c3c; font-weight: 600;">
-                                    5/22/2025
+                                    05/19/2025
                                 </p>
                             </td>
                         </tr>
@@ -110,22 +110,14 @@
         </div>
 
         <!-- Automated message -->
-        <div
-            style="margin-top: 20px; padding-top: 20px; border-top: 1px solid #e5e7eb; font-family: Arial, Helvetica, sans-serif; font-size: 0.8rem; color: #6b7280; line-height: 1.4; text-align: center;">
-            <p style="margin: 0;">
-                <strong style="color: #4b5563;">This is an automated email. Please do not reply directly to this
-                    message. </strong>
-            </p>
-            <p style="margin: 8px 0 0 0;">
-            If you have questions about a specific Invoice, search for the subject line "<span style="font-style: italic;">Invoice# (Number) &hyphen; Client: Southern Ionics</span>"
-                <br>in your inbox and reply to our initial invoice email.
-            </p>
-            <p style="margin: 8px 0 0 0;">
-                For urgent matters, contact your AR Specialist at <span
-                    style="color: #2563eb;">rgonzalez@inspyrsolutions.com</span>.
-            </p>
-            
-        </div>
+         <div style="margin-top: 40px; padding-top: 20px; border-top: 1px solid #e5e7eb; font-family: Arial, Helvetica, sans-serif; font-size: 0.8rem; color: #6b7280; line-height: 1.4; text-align: center;">
+          <p style="margin: 0;">
+              <strong style="color: #4b5563;">For questions, comments, or concerns contact your AR Specialist at <span style="color: #2563eb;">rgonzalez@inspyrsolutions.com</span>.</strong>
+          </p>
+          <p style="margin: 8px 0 0 0;">
+              Find your original invoice by searching "<span style="font-style: italic;">Invoice #(Number)- Client: Southern Ionics</span>" in your inbox.
+          </p>
+      </div>
         </div>
         
 </body>
