--- a/InternalReminders/check_paused_invoices.html
+++ b/InternalReminders/check_paused_invoices.html
@@ -42,23 +42,28 @@
                         style="border-radius: 8px">
                         <!-- Table Header -->
                         <tr style="border-radius: 8px 8px 0 0;">
-                            <td style="background-color: #f9f9f9; padding: 16px; width: 25%; vertical-align: top; text-align: center;">
-                                <p style="margin: 0; font-size: 12px; color: #333333; text-transform: uppercase; letter-spacing: 1px; font-weight: 600;">
+                            <td style="background-color: #f9f9f9; padding: 12px; width: 18%; vertical-align: top; text-align: center;">
+                                <p style="margin: 0; font-size: 11px; color: #333333; text-transform: uppercase; letter-spacing: 1px; font-weight: 600;">
                                     Client 
                                 </p>
                             </td>
-                            <td style="background-color: #f9f9f9; padding: 16px; width: 25%; vertical-align: top; text-align: center;">
-                                <p style="margin: 0; font-size: 12px; color: #333333; text-transform: uppercase; letter-spacing: 1px; font-weight: 600;">
-                                    Customer #
+                            <td style="background-color: #f9f9f9; padding: 12px; width: 18%; vertical-align: top; text-align: center;">
+                                <p style="margin: 0; font-size: 11px; color: #333333; text-transform: uppercase; letter-spacing: 1px; font-weight: 600;">
+                                    Calls
                                 </p>
                             </td>
-                            <td style="background-color: #f9f9f9; padding: 16px 10px; width: 25%; vertical-align: top; text-align: center;">
-                                <p style="margin: 0; font-size: 12px; color: #333333; text-transform: uppercase; letter-spacing: 1px; font-weight: 600;">
-                                    Amount Paused
+                            <td style="background-color: #f9f9f9; padding: 12px 10px; width: 18%; vertical-align: top; text-align: center;">
+                                <p style="margin: 0; font-size: 11px; color: #333333; text-transform: uppercase; letter-spacing: 1px; font-weight: 600;">
+                                    Emails
                                 </p>
                             </td>
-                             <td style="background-color: #f9f9f9; padding: 16px; width: 25%; vertical-align: top; text-align: center;">
-                                <p style="margin: 0; font-size: 12px; color: #333333; text-transform: uppercase; letter-spacing: 1px; font-weight: 600;">
+                            <td style="background-color: #f9f9f9; padding: 12px 10px; width: 16%; vertical-align: top; text-align: center;">
+                                <p style="margin: 0; font-size: 11px; color: #333333; text-transform: uppercase; letter-spacing: 1px; font-weight: 600;">
+                                    Fully
+                                </p>
+                            </td>
+                             <td style="background-color: #f9f9f9; padding: 12px; width: 30%; vertical-align: top; text-align: center;">
+                                <p style="margin: 0; font-size: 11px; color: #333333; text-transform: uppercase; letter-spacing: 1px; font-weight: 600;">
                                     Collector
                                 </p>
                             </td>
@@ -66,44 +71,54 @@
                         
                         <!-- Invoice Data Rows -->
                         <tr>
-                            <td style="padding: 16px; width: 25%; vertical-align: top; text-align: center;">
+                            <td style="padding: 10px; width: 18%; vertical-align: top; text-align: center;">
                                 <p style="margin: 0; font-size: 0.9rem; color: #333333; font-weight: 600;">
-                                    Southern Ionics
+                                     2189153
                                 </p>
                             </td>
-                            <td style="padding: 16px; width: 25%; vertical-align: top; text-align: center;">
-                                <p style="margin: 0; font-size: 0.9rem; color: #333333; font-weight: 600;">
-                                    2189153
-                                </p>
-                            </td>
-                            <td style="padding: 16px; width: 25%; vertical-align: top; text-align: center;">
+                            <td style="padding: 10px; width: 18%; vertical-align: top; text-align: center;">
                                 <p style="margin: 0; font-size: 0.9rem; color: #e74c3c; font-weight: 600;">
                                     4
                                 </p>
                             </td>
-                            <td style="padding: 16px; width: 25%; vertical-align: top; text-align: center;">
+                            <td style="padding: 10px; width: 18%; vertical-align: top; text-align: center;">
+                                <p style="margin: 0; font-size: 0.9rem; color: #e74c3c; font-weight: 600;">
+                                    4
+                                </p>
+                            </td>
+                            <td style="padding: 10px; width: 16%; vertical-align: top; text-align: center;">
+                                <p style="margin: 0; font-size: 0.9rem; color: #e74c3c; font-weight: 600;">
+                                    4
+                                </p>
+                            </td>
+                            <td style="padding: 10px; width: 30%; vertical-align: top; text-align: center;">
                                 <p style="margin: 0; font-size: 0.9rem; color: #333333; font-weight: 600;">
                                     Rachel Gonzales
                                 </p>
                             </td>
                         </tr>
                         <tr>
-                            <td style="padding: 16px; width: 25%; vertical-align: top; text-align: center;">
+                            <td style="padding: 10px; width: 18%; vertical-align: top; text-align: center;">
                                 <p style="margin: 0; font-size: 0.9rem; color: #333333; font-weight: 600;">
-                                    Southern Ionics
+                                     2189153
                                 </p>
                             </td>
-                            <td style="padding: 16px; width: 25%; vertical-align: top; text-align: center;">
-                                <p style="margin: 0; font-size: 0.9rem; color: #333333; font-weight: 600;">
-                                    2189153
-                                </p>
-                            </td>
-                            <td style="padding: 16px; width: 25%; vertical-align: top; text-align: center;">
+                            <td style="padding: 10px; width: 18%; vertical-align: top; text-align: center;">
                                 <p style="margin: 0; font-size: 0.9rem; color: #e74c3c; font-weight: 600;">
                                     4
                                 </p>
                             </td>
-                            <td style="padding: 16px; width: 25%; vertical-align: top; text-align: center;">
+                            <td style="padding: 10px; width: 18%; vertical-align: top; text-align: center;">
+                                <p style="margin: 0; font-size: 0.9rem; color: #e74c3c; font-weight: 600;">
+                                    4
+                                </p>
+                            </td>
+                            <td style="padding: 10px; width: 16%; vertical-align: top; text-align: center;">
+                                <p style="margin: 0; font-size: 0.9rem; color: #e74c3c; font-weight: 600;">
+                                    4
+                                </p>
+                            </td>
+                            <td style="padding: 10px; width: 30%; vertical-align: top; text-align: center;">
                                 <p style="margin: 0; font-size: 0.9rem; color: #333333; font-weight: 600;">
                                     Rachel Gonzales
                                 </p>
