--- a/InternalReminders/third_failed_call.html
+++ b/InternalReminders/third_failed_call.html
@@ -9,7 +9,7 @@
 <body
     style="font-family: Arial, Helvetica, sans-serif; line-height: 1.6; color: #1f2937; max-width: 800px; margin: 0 auto; padding: 40px 20px; background-color: #f9fafb;">
     <div
-        style="margin-bottom: 12px; background: #ff9800; border-radius: 8px 8px 0 0; padding: 24px; text-align: center; font-family: Arial, Helvetica, sans-serif;">
+        style="margin-bottom: 12px; background: #0277BD; border-radius: 8px 8px 0 0; padding: 24px; text-align: center; font-family: Arial, Helvetica, sans-serif;">
         <table width="100%" cellpadding="0" cellspacing="0" border="0">
             <tr>
                 <td>
@@ -73,14 +73,14 @@
                             </td>
                             <td style="padding: 16px; width: 33%; vertical-align: top; text-align: center;">
                                 <p style="margin: 0; font-size: 16px; color: #e74c3c; font-weight: 600;">
-                                    5/22/2025
+                                    05/19/2025
                                 </p>
                             </td>
                         </tr>
                         <tr>
                             <td style="padding: 16px; width: 33%; vertical-align: top; text-align: center;">
                                 <p style="margin: 0; font-size: 16px; color: #333333; font-weight: 600;">
-                                    1001
+                                    1002
                                 </p>
                             </td>
                             <td style="padding: 16px; width: 33%; vertical-align: top; text-align: center;">
@@ -90,7 +90,7 @@
                             </td>
                             <td style="padding: 16px; width: 33%; vertical-align: top; text-align: center;">
                                 <p style="margin: 0; font-size: 16px; color: #e74c3c; font-weight: 600;">
-                                    5/22/2025
+                                    05/19/2025
                                 </p>
                             </td>
                         </tr>
