--- a/InternalReminders/check_paused_invoices.html
+++ b/InternalReminders/check_paused_invoices.html
@@ -77,18 +77,18 @@
                                 </p>
                             </td>
                             <td style="padding: 10px; width: 18%; vertical-align: top; text-align: center;">
-                                <p style="margin: 0; font-size: 0.9rem; color: #e74c3c; font-weight: 600;">
-                                    4
+                                <p style="margin: 0; font-size: 0.9rem;  color: #e74c3c;  font-weight: 600;">
+                                     1 
                                 </p>
                             </td>
                             <td style="padding: 10px; width: 18%; vertical-align: top; text-align: center;">
-                                <p style="margin: 0; font-size: 0.9rem; color: #e74c3c; font-weight: 600;">
-                                    4
+                                <p style="margin: 0; font-size: 0.9rem;  color: #333333;  font-weight: 600;">
+                                     0 
                                 </p>
                             </td>
                             <td style="padding: 10px; width: 16%; vertical-align: top; text-align: center;">
-                                <p style="margin: 0; font-size: 0.9rem; color: #e74c3c; font-weight: 600;">
-                                    4
+                                <p style="margin: 0; font-size: 0.9rem;  color: #333333;  font-weight: 600;">
+                                     0 
                                 </p>
                             </td>
                             <td style="padding: 10px; width: 30%; vertical-align: top; text-align: center;">
@@ -104,18 +104,18 @@
                                 </p>
                             </td>
                             <td style="padding: 10px; width: 18%; vertical-align: top; text-align: center;">
-                                <p style="margin: 0; font-size: 0.9rem; color: #e74c3c; font-weight: 600;">
-                                    4
+                                <p style="margin: 0; font-size: 0.9rem;  color: #e74c3c;  font-weight: 600;">
+                                     4 
                                 </p>
                             </td>
                             <td style="padding: 10px; width: 18%; vertical-align: top; text-align: center;">
-                                <p style="margin: 0; font-size: 0.9rem; color: #e74c3c; font-weight: 600;">
-                                    4
+                                <p style="margin: 0; font-size: 0.9rem;  color: #e74c3c;  font-weight: 600;">
+                                     4 
                                 </p>
                             </td>
                             <td style="padding: 10px; width: 16%; vertical-align: top; text-align: center;">
-                                <p style="margin: 0; font-size: 0.9rem; color: #e74c3c; font-weight: 600;">
-                                    4
+                                <p style="margin: 0; font-size: 0.9rem;  color: #e74c3c;  font-weight: 600;">
+                                     4 
                                 </p>
                             </td>
                             <td style="padding: 10px; width: 30%; vertical-align: top; text-align: center;">
